Bug 1692708 - Run helper_relative_scroll_smoothness.html with native key events both on Windows and Mac. r=botond
synthesizeKey() just invokes a corresponding command. In "KEY_ArrowDown" case
it's nsISelectionController::ScrollLine [1] which is actually
PresShell::ScrollLine which calls nsIScrollable::ScrollBy, that's not what we
wanted to test for bug 1692707. To exercise APZ's keyboard scrolling we need to
use synthesizeNativeKey instead.

[1] https://searchfox.org/mozilla-central/rev/126f016b59513988fae56c2b3f69c1cd23fe6ca1/dom/base/nsGlobalWindowCommands.cpp#363-364

Differential Revision: https://phabricator.services.mozilla.com/D129593

UltraBlame original commit: 8beac9395793408b7df26dabad87e124deb654c0

--- a/gfx/layers/apz/test/mochitest/helper_relative_scroll_smoothness.html
+++ b/gfx/layers/apz/test/mochitest/helper_relative_scroll_smoothness.html
@@ -3,6 +3,7 @@
 <meta charset="utf-8">
 <script src="/tests/SimpleTest/EventUtils.js"></script>
 <script src="/tests/SimpleTest/SimpleTest.js"></script>
+<script src="/tests/SimpleTest/NativeKeyCodes.js"></script>
 <script src="/tests/SimpleTest/paint_listener.js"></script>
 <script src="apz_test_utils.js"></script>
 <script src="apz_test_native_event_utils.js"></script>
@@ -76,6 +77,13 @@ async function test() {
       case "key":
         synthesizeKey("KEY_ArrowDown");
         break;
+      case "native-key":
+        const DownArrowKeyCode = nativeArrowDownKey();
+        ok(synthesizeNativeKey(KEYBOARD_LAYOUT_EN_US,
+                               DownArrowKeyCode, {}  /* no modifier */,
+                               "", ""),
+          "Dispatched an down arrow key event");
+        break;
       case "wheel":
         synthesizeNativeWheel(window, 50, 50, 0, -50);
         break;
@@ -113,8 +121,24 @@ async function test() {
   }
 }
 
-waitUntilApzStable()
-.then(test)
-.then(subtestDone, subtestFailed);
+function isOnChaosMode() {
+  const env = SpecialPowers.Cc["@mozilla.org/process/environment;1"]
+                           .getService(SpecialPowers.Ci.nsIEnvironment);
+  return env.get("MOZ_CHAOSMODE");
+}
 
+if (searchParams.get("input-type") == "native-key" &&
+    getPlatform() != "mac" && getPlatform() != "windows") {
+  ok(true, "Skipping test because native key events are not supported on " +
+     getPlatform());
+  subtestDone();
+} else if (searchParams.get("input-type") == "native-key" &&
+           getPlatform() == "mac" && isOnChaosMode()) {
+  ok(true, "Skipping native-key tests on verify runs on Mac");
+  subtestDone();
+} else {
+  waitUntilApzStable()
+  .then(test)
+  .then(subtestDone, subtestFailed);
+}
 </script>
