--- a/dom/events/test/window_bug1369072.html
+++ b/dom/events/test/window_bug1369072.html
@@ -1,19 +1,21 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=1369072
+-->
 <head>
   <title>Test for Bug 1369072</title>
   <script src="/tests/SimpleTest/SimpleTest.js"></script>
   <script src="/tests/SimpleTest/EventUtils.js"></script>
+  <script src="/tests/SimpleTest/paint_listener.js"></script>
+  <script src="/tests/gfx/layers/apz/test/mochitest/apz_test_utils.js"></script>
   <link rel="stylesheet" type="text/css" href="/tests/SimpleTest/test.css"/>
 </head>
 <body>
 <a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=1369072">Mozilla Bug 1369072</a>
 <div id="display">
 <iframe id="iframe" srcdoc="<a id='anchor' href='about:home'>anchor text</a><div id='div'></div>" style="width: 300px; height: 300px;"></iframe>
-
+<!-- make <body> contents overflow -->
 <div style="width: 1000px; height: 1000px;"></div>
 </div>
 <div id="content" style="display: none">
@@ -40,8 +42,13 @@ async function runTests()
   var anchor = iframe.contentDocument.getElementById("anchor");
   var div = iframe.contentDocument.getElementById("div");
 
-  function resetScroll()
+  async function resetScroll()
   {
+    // Cancel any scroll animation on the target scroll elements to make sure
+    // setting scrollTop or scrolLeft works as expected.
+    await cancelScrollAnimation(document.documentElement);
+    await cancelScrollAnimation(iframe.contentDocument.documentElement);
+
     return new Promise(resolve => {
       var scrollParent = document.documentElement.scrollTop || document.documentElement.scrollLeft;
       var scrollChild = iframe.contentDocument.documentElement.scrollTop || iframe.contentDocument.documentElement.scrollLeft;
