Bug 1692708 - Add scrollTo and scrollTop test cases in helper_relative_scroll_smoothness.html. r=botond
Differential Revision: https://phabricator.services.mozilla.com/D129595

UltraBlame original commit: 361c96f8f3126e8cb4c5abeff52bdfbe1b8520b1

--- a/gfx/layers/apz/test/mochitest/helper_relative_scroll_smoothness.html
+++ b/gfx/layers/apz/test/mochitest/helper_relative_scroll_smoothness.html
@@ -45,7 +45,20 @@ window.addEventListener("scroll",  () => {
     document.documentElement.style.backgroundPosition = `0px ${offset}px`;
     document.body.style.height = `${initialBodyHeight + offset}px`;
 
-    window.scrollBy(0, 10);
+    switch (searchParams.get("scroll-method")) {
+      case "scrollBy":
+        window.scrollBy(0, 10);
+        break;
+      case "scrollTop":
+        document.scrollingElement.scrollTop += 10;
+        break;
+      case "scrollTo":
+        window.scrollTo(0, window.scrollY + 10);
+        break;
+      default:
+        ok(false, "Unsupported scroll method: " + searchParams.get("scroll-method"));
+        break;
+    }
 
     // Simulate some jank.
     var freezeDurationInMilliseconds = 100;
