Bug 1706346 part 4 - [css-lists] Update existing tests and add a ton of new tests for 'reversed(<counter-name>)'.  r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D129958

UltraBlame original commit: dcfdc1fc2cecc6cee44b34161af6885d82434c06

--- a/testing/web-platform/tests/css/css-lists/li-value-reversed-005-ref.html
+++ b/testing/web-platform/tests/css/css-lists/li-value-reversed-005-ref.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <title>CSS Test Reference</title>
 <ol>
- <li value=3>three
+ <li value=0>zero
  <div></div>
- <li value=1>one
+ <li value=0>zero
 </ol>
