--- a/testing/web-platform/tests/css/css-conditional/js/CSS-supports-L3.html
+++ b/testing/web-platform/tests/css/css-conditional/js/CSS-supports-L3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>CSS.supports</title>
-<link rel="help" href="https://drafts.csswg.org/css-conditional/#dom-css-supports">
+<title>CSS.supports() Level 3</title>
+<link rel="help" href="https://www.w3.org/TR/css-conditional-3/#the-css-namespace">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script>
@@ -40,28 +40,4 @@
   test(function() {
     assert_equals(CSS.supports("--foo", "blah"), true);
   }, "two argument form succeeds for custom property");
-
-  test(function() {
-    assert_equals(CSS.supports("selector(div)"), true);
-  }, "selector() function accepts a selector");
-
-  test(function() {
-    assert_equals(CSS.supports("selector(div, div)"), false);
-  }, "selector() function doesn't accept a selector list");
-
-  test(function() {
-    assert_equals(CSS.supports("selector(::-webkit-unknown-pseudo-element)"), false);
-  }, "selector() function rejects unknown webkit pseudo-elements.");
-
-  test(function() {
-    assert_equals(CSS.supports("selector(::before)"), true);
-  }, "selector() function accepts known pseudo-elements");
-
-  test(function() {
-    assert_equals(CSS.supports("selector(div + .c)"), true);
-  }, "selector() with simple combinators");
-
-  test(function() {
-    assert_equals(CSS.supports("selector(div | .c)"), false);
-  }, "selector() with unknown combinators");
 </script>
