--- a/testing/web-platform/tests/html/user-activation/activation-trigger-mouse-right.html
+++ b/testing/web-platform/tests/html/user-activation/activation-trigger-mouse-right.html
@@ -17,7 +17,8 @@
   <script>
     promise_test(async () => {
         var actions = new test_driver.Actions();
-        actions.pointerMove(0, 0, {origin: document.body})
+        actions_promise = actions
+            .pointerMove(0, 0, {origin: document.body})
             .pointerDown({button: actions.ButtonType.RIGHT})
             .pointerUp({button: actions.ButtonType.RIGHT})
             .send();
