Bug 1617611: Annotate each failing test individually. r=webdriver-reviewers,necko-reviewers,ckerschb,whimboo,valentin
Annotating each test individually lets us avoid introducing new failing tests
while we go through the backlog of failing tests.

Depends on D129162

Differential Revision: https://phabricator.services.mozilla.com/D129163

UltraBlame original commit: fdb2c6bfc0c6fc1d2511a5878ace937d397cfe61

--- a/dom/xhr/tests/test_worker_xhr_3rdparty.html
+++ b/dom/xhr/tests/test_worker_xhr_3rdparty.html
@@ -1,12 +1,12 @@
-
-
-
-
+<!--
+  Any copyright is dedicated to the Public Domain.
+  http://creativecommons.org/publicdomain/zero/1.0/
+-->
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+Tests of DOM Worker Threads XHR(Bug 450452 )
+-->
 <head>
   <title>Test for DOM Worker Threads XHR (Bug 450452 )</title>
   <script src="/tests/SimpleTest/SimpleTest.js"></script>
@@ -21,13 +21,15 @@
 
   document.cookie = "a=cookie_is_set";
 
-  SpecialPowers.pushPrefEnv({ set: [[ "network.cookie.cookieBehavior", 1 ]] },
+  // Bug 1617611: Fix all the tests broken by "cookies SameSite=lax by default"
+  SpecialPowers.pushPrefEnv({ set: [[ "network.cookie.cookieBehavior", 1 ], ["network.cookie.sameSite.laxByDefault", false]] },
                             () => {
     let w = window.open("window_worker_xhr_3rdparty.html");
 
     onmessage = e => {
       if (e.data.type == "finish") {
         w.close();
+        SpecialPowers.clearUserPref("network.cookie.sameSite.laxByDefault");
         SimpleTest.finish();
         return;
       }
