--- a/dom/serviceworkers/test/test_cookie_fetch.html
+++ b/dom/serviceworkers/test/test_cookie_fetch.html
@@ -1,7 +1,7 @@
-
-
-
-
+<!--
+  Any copyright is dedicated to the Public Domain.
+  http://creativecommons.org/publicdomain/zero/1.0/
+-->
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -42,6 +42,7 @@
       } else if (e.data.status == "unregistrationdone") {
         window.onmessage = null;
         ok(true, "Test finished successfully");
+        SpecialPowers.clearUserPref("network.cookie.sameSite.laxByDefault");
         SimpleTest.finish();
       }
     };
@@ -53,6 +54,8 @@
       ["dom.serviceWorkers.exemptFromPerDomainMax", true],
       ["dom.serviceWorkers.enabled", true],
       ["dom.serviceWorkers.testing.enabled", true],
+      // Bug 1617611: Fix all the tests broken by "cookies SameSite=lax by default"
+      ["network.cookie.sameSite.laxByDefault", false],
     ]}, runTest);
   };
 </script>
