Backed out 2 changesets (bug 1617611) for causing mochitest failures on storageAccessWithDynamicFpi.js. CLOSED TREE
Backed out changeset fdb2c6bfc0c6 (bug 1617611)
Backed out changeset c3352f4b3681 (bug 1617611)

UltraBlame original commit: bb05a9c04907014611396dec1fbfe65b0eba8295

--- a/dom/security/test/cors/test_CrossSiteXHR.html
+++ b/dom/security/test/cors/test_CrossSiteXHR.html
@@ -25,13 +25,8 @@ var gen;
 function initTest() {
   SimpleTest.waitForExplicitFinish();
   // Allow all cookies, then do the actual test initialization
-  SpecialPowers.pushPrefEnv({
-    "set": [
-      ["network.cookie.cookieBehavior", 0],
-      // Bug 1617611: Fix all the tests broken by "cookies SameSite=lax by default"
-      ["network.cookie.sameSite.laxByDefault", false],
-	]
-  }, initTestCallback);
+  SpecialPowers.pushPrefEnv({"set": [["network.cookie.cookieBehavior", 0]]},
+  																	  initTestCallback);
 }
 
 function initTestCallback() {
@@ -1481,7 +1476,6 @@ function* runTest() {
   }
 
 
-  SpecialPowers.clearUserPref("network.cookie.sameSite.laxByDefault");
   SimpleTest.finish();
 }
 
