--- a/dom/security/test/https-first/test_toplevel_cookies.html
+++ b/dom/security/test/https-first/test_toplevel_cookies.html
@@ -74,7 +74,6 @@ async function receiveMessage(event) {
   currentRun++;
   if (currentTest >= redirectQueries.length -1  && currentRun === ALL_COOKIE_COMB.length && !sameOriginRequest) {
     window.removeEventListener("message", receiveMessage);
-    SpecialPowers.clearUserPref("network.cookie.sameSite.laxByDefault");
     SimpleTest.finish();
     return;
   }
@@ -107,9 +106,7 @@ async function runTest() {
 }
 
 SpecialPowers.pushPrefEnv({ set: [
-    ["dom.security.https_first", true],
-    // Bug 1617611: Fix all the tests broken by "cookies SameSite=lax by default"
-    ["network.cookie.sameSite.laxByDefault", false],
+    ["dom.security.https_first", true]
   ]}, runTest);
 
 </script>
