--- a/devtools/client/performance-new/test/browser/webchannel.html
+++ b/devtools/client/performance-new/test/browser/webchannel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-
-
-
+<!-- This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this
+   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <html>
   <head>
     <meta charset="utf-8"/>
@@ -17,8 +17,7 @@
         new CustomEvent('WebChannelMessageToChrome', {
           detail: JSON.stringify({
             id: 'profiler.firefox.com',
-            message: { type: "ENABLE_MENU_BUTTON" },
-            requestId: 0,
+            message: { type: "ENABLE_MENU_BUTTON", requestId: 0 },
           }),
         })
       );
