Bug 1739454 - Remove reftest-wait in reftest. r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D131642

UltraBlame original commit: 3accfa522abbe084ceb145d1f6b001e71ff07aa2

--- a/dom/canvas/crashtests/1739454-1.html
+++ b/dom/canvas/crashtests/1739454-1.html
@@ -9,6 +9,7 @@ document.addEventListener('DOMContentLoaded', async () => {
   try { b = await a.arrayBuffer() } catch (e) { }
   c = await self.createImageBitmap(new Blob([b]), {'premultiplyAlpha':'none'})
   ctx.createPattern(c, 'repeat-x')
+  document.documentElement.classList.remove("reftest-wait");
 })
 </script>
 </body>
