--- a/gfx/layers/apz/test/reftest/root-scrollbar-async-zoomed-in.html
+++ b/gfx/layers/apz/test/reftest/root-scrollbar-async-zoomed-in.html
@@ -5,8 +5,8 @@
       reftest-async-zoom="2.0"><head>
 <meta name="viewport" content="initial-scale=1,width=device-width">
 </head>
-
-
+<!-- Doing scrollTo(1,1) is to activate the left/up arrows in the scrollbars
+     for non-overlay scrollbar environments -->
 <body onload="scrollTo(1,1); document.documentElement.classList.remove('reftest-wait')">
 <div style="width: 4500px; height: 10000px; background: white;"></div>
 </body>
