--- a/gfx/layers/apz/test/mochitest/test_group_hittest-2.html
+++ b/gfx/layers/apz/test/mochitest/test_group_hittest-2.html
@@ -48,6 +48,7 @@ var subtests = [
   {"file": "helper_hittest_bug1730606-2.html", "prefs": prefs},
   {"file": "helper_hittest_bug1730606-3.html", "prefs": prefs},
   {"file": "helper_hittest_bug1730606-4.html", "prefs": prefs},
+  {"file": "helper_hittest_bug1257288.html", "prefs": prefs},
   // This test should be at the end, because it's prone to timeout.
   {"file": "helper_hittest_spam.html", "prefs": prefs},
 ];
