--- a/dom/system/tests/ioutils/test_ioutils_stat_set_modification_time.html
+++ b/dom/system/tests/ioutils/test_ioutils_stat_set_modification_time.html
@@ -80,42 +80,42 @@
       );
     });
 
-    add_task(async function test_touch_and_stat() {
-      info("Test attempt to touch a file");
+    add_task(async function test_setModificationTime_and_stat() {
+      info("Test attempt to setModificationTime a file");
 
       const tmpDir = await PathUtils.getTempDir();
 
-      const tmpFileName = PathUtils.join(tmpDir, "test_touch_and_stat.tmp");
+      const tmpFileName = PathUtils.join(tmpDir, "test_setModificationTime_and_stat.tmp");
       await createFile(tmpFileName);
 
       const oldFileInfo = await IOUtils.stat(tmpFileName);
       await sleep(500);
 
       // Now update the time stamp.
-      const stamp = await IOUtils.touch(tmpFileName);
+      const stamp = await IOUtils.setModificationTime(tmpFileName);
       const newFileInfo = await IOUtils.stat(tmpFileName);
 
       ok(
         newFileInfo.lastModified > oldFileInfo.lastModified,
-        "IOUtils::touch can update the lastModified time stamp on the file system"
+        "IOUtils::setModificationTime can update the lastModified time stamp on the file system"
       );
       is(
         stamp,
         newFileInfo.lastModified,
-        "IOUtils::touch returns the updated time stamp."
+        "IOUtils::setModificationTime returns the updated time stamp."
       );
 
-      info("Test attempt to touch a directory");
-      const tmpDirName = PathUtils.join(tmpDir, "test_touch_and_stat.tmp.d");
+      info("Test attempt to setModificationTime a directory");
+      const tmpDirName = PathUtils.join(tmpDir, "test_setModificationTime_and_stat.tmp.d");
       await createDir(tmpDirName);
 
       await cleanup(tmpFileName, tmpDirName);
     });
 
-    add_task(async function test_touch_custom_mod_time() {
+    add_task(async function test_setModificationTime_custom_mod_time() {
       const tmpDir = await PathUtils.getTempDir();
 
-      const tempFileName = PathUtils.join(tmpDir, "test_touch_custom_mod_time.tmp");
+      const tempFileName = PathUtils.join(tmpDir, "test_setModificationTime_custom_mod_time.tmp");
       await createFile(tempFileName);
       const originalInfo = await IOUtils.stat(tempFileName);
       const now = originalInfo.lastModified;
@@ -124,21 +124,21 @@
 
       info("Test attempt to set modification time to the future");
       const future = now + oneMinute;
-      let newModTime = await IOUtils.touch(tempFileName, future);
+      let newModTime = await IOUtils.setModificationTime(tempFileName, future);
       const futureInfo = await IOUtils.stat(tempFileName);
-      Assert.less(originalInfo.lastModified, futureInfo.lastModified, "IOUtils::touch can set a future modification time for the file");
+      Assert.less(originalInfo.lastModified, futureInfo.lastModified, "IOUtils::setModificationTime can set a future modification time for the file");
 
-      is(newModTime, futureInfo.lastModified, "IOUtils::touch returns the updated time stamp");
-      is(newModTime, future, "IOUtils::touch return value matches the argument value exactly");
+      is(newModTime, futureInfo.lastModified, "IOUtils::setModificationTime returns the updated time stamp");
+      is(newModTime, future, "IOUtils::setModificationTime return value matches the argument value exactly");
 
       info("Test attempt to set modification time to the past");
       const past = now - 2 * oneMinute;
-      newModTime = await IOUtils.touch(tempFileName, past);
+      newModTime = await IOUtils.setModificationTime(tempFileName, past);
       const pastInfo = await IOUtils.stat(tempFileName);
-      Assert.greater(originalInfo.lastModified, pastInfo.lastModified, "IOUtils::touch can set a past modification time for the file");
+      Assert.greater(originalInfo.lastModified, pastInfo.lastModified, "IOUtils::setModificationTime can set a past modification time for the file");
 
-      is(newModTime, pastInfo.lastModified, "IOUtils::touch returns the updated time stamp");
-      is(newModTime, past, "IOUtils::touch return value matches the argument value exactly");
+      is(newModTime, pastInfo.lastModified, "IOUtils::setModificationTime returns the updated time stamp");
+      is(newModTime, past, "IOUtils::setModificationTime return value matches the argument value exactly");
 
       await cleanup(tempFileName);
     });
@@ -152,7 +152,7 @@
         const originalInfo = await IOUtils.stat(tempFileName);
 
         const future = originalInfo.lastModified + 6000;
-        await IOUtils.touch(tempFileName, future);
+        await IOUtils.setModificationTime(tempFileName, future);
         const futureInfo = await IOUtils.stat(tempFileName);
 
         ok(originalInfo.hasOwnProperty("creationTime"), "originalInfo has creationTime field");
@@ -169,25 +169,25 @@
       }
     });
 
-    add_task(async function test_touch_failures() {
-      info("Test attempt to touch a non-existing file");
+    add_task(async function test_setModificationTime_failures() {
+      info("Test attempt to setModificationTime a non-existing file");
       const tmpDir = await PathUtils.getTempDir();
-      const notExistsFile = PathUtils.join(tmpDir, "test_touch_not_exists.tmp");
+      const notExistsFile = PathUtils.join(tmpDir, "test_setModificationTime_not_exists.tmp");
 
       await Assert.rejects(
-        IOUtils.touch(notExistsFile),
-        /Could not touch file\(.*\) because it does not exist/,
-        "IOUtils::touch throws if the target file does not exist"
+        IOUtils.setModificationTime(notExistsFile),
+        /Could not set modification time of file\(.*\) because it does not exist/,
+        "IOUtils::setModificationTime throws if the target file does not exist"
       );
 
       info("Test attempt to set modification time to Epoch");
-      const tempFileName = PathUtils.join(tmpDir, "test_touch_epoch.tmp");
+      const tempFileName = PathUtils.join(tmpDir, "test_setModificationTime_epoch.tmp");
       await createFile(tempFileName);
 
       await Assert.rejects(
-        IOUtils.touch(tempFileName, 0),
+        IOUtils.setModificationTime(tempFileName, 0),
         /Refusing to set the modification time of file\(.*\) to 0/,
-        "IOUtils::touch cannot set the file modification time to Epoch"
+        "IOUtils::setModificationTime cannot set the file modification time to Epoch"
       );
 
       await cleanup(tempFileName);
