--- a/testing/web-platform/tests/custom-elements/form-associated/ElementInternals-validation.html
+++ b/testing/web-platform/tests/custom-elements/form-associated/ElementInternals-validation.html
@@ -91,6 +91,11 @@ test(() => {
 }, "willValidate should throw NotSupportedError if the target element is not a form-associated custom element");
 
 test(() => {
+  const element = new NotFormAssociatedElement();
+  assert_throws_dom('NotSupportedError', () => element.i.validity);
+}, "validity should throw NotSupportedError if the target element is not a form-associated custom element");
+
+test(() => {
   const control = document.createElement('my-control');
   const validity = control.i.validity;
   assert_false(validity.valueMissing, 'default valueMissing');
