Bug 1556364 - Part 2-2: Implement validationMessage attribute of ElementInternals; r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D129811

UltraBlame original commit: f6f7f949551fb95b5a153b92f6a38f8ffd4c0acf

--- a/testing/web-platform/tests/custom-elements/form-associated/ElementInternals-validation.html
+++ b/testing/web-platform/tests/custom-elements/form-associated/ElementInternals-validation.html
@@ -96,6 +96,11 @@ test(() => {
 }, "validity should throw NotSupportedError if the target element is not a form-associated custom element");
 
 test(() => {
+  const element = new NotFormAssociatedElement();
+  assert_throws_dom('NotSupportedError', () => element.i.validationMessage);
+}, "validationMessage should throw NotSupportedError if the target element is not a form-associated custom element");
+
+test(() => {
   const control = document.createElement('my-control');
   const validity = control.i.validity;
   assert_false(validity.valueMissing, 'default valueMissing');
