Bug 1743048 - Tweak a bit test_input_password_show_password_button.html.
Wait for two rAF instead of one so that we guarantee layout has
happened.

And use assertSnapshots so that when it fails we have screenshots.

Differential Revision: https://phabricator.services.mozilla.com/D132241

UltraBlame original commit: 10311098c27f57f3f15f383de1a9f1f5486b453c

--- a/dom/html/test/forms/test_input_password_show_password_button.html
+++ b/dom/html/test/forms/test_input_password_show_password_button.html
@@ -11,34 +11,30 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=502258
   <script src="/tests/SimpleTest/WindowSnapshot.js"></script>
   <link rel="stylesheet" href="/tests/SimpleTest/test.css">
   <script>
-
   SimpleTest.waitForExplicitFinish();
 
-  var gTestRunner = null;
-
   async function test_append_char(aId) {
-    var element = document.getElementById(aId);
+    let element = document.getElementById(aId);
     element.focus();
 
-    var baseSnapshot = await snapshotWindow(window);
+    let baseSnapshot = await snapshotWindow(window);
 
     element.selectionStart = element.selectionEnd = element.value.length;
 
     await new Promise(resolve => setTimeout(resolve, 0));
     sendString('f');
-    await new Promise(resolve => requestAnimationFrame(resolve));
-    var selectionAtTheEndSnapshot = await snapshotWindow(window);
-    results = compareSnapshots(baseSnapshot, selectionAtTheEndSnapshot, false);
-    ok(results[0], "after appending a character, string should have changed");
+
+    await new Promise(resolve => requestAnimationFrame(() => requestAnimationFrame(resolve)));
+
+    let selectionAtTheEndSnapshot = await snapshotWindow(window);
+    assertSnapshots(baseSnapshot, selectionAtTheEndSnapshot, /* equal = */ false, /* fuzz = */ null, "baseSnapshot", "selectionAtTheEndSnapshot");
 
     element.value = element.value;
-    var tmpSnapshot = await snapshotWindow(window);
+    let tmpSnapshot = await snapshotWindow(window);
 
-    results = compareSnapshots(baseSnapshot, tmpSnapshot, false);
-    ok(results[0], "re-setting the value should change nothing");
-
-    results = compareSnapshots(selectionAtTheEndSnapshot, tmpSnapshot, true);
-    ok(results[0], "re-setting the value should change nothing");
+    // Re-setting value shouldn't have changed anything.
+    assertSnapshots(baseSnapshot, tmpSnapshot, /* equal = */ false, /* fuzz = */ null, "baseSnapshot", "tmpSnapshot");
+    assertSnapshots(selectionAtTheEndSnapshot, tmpSnapshot, /* equal = */ true, /* fuzz = */ null, "selectionAtTheEndSnapshot", "tmpSnapshot");
 
     element.selectionStart = element.selectionEnd = 0;
     element.blur();
