--- a/testing/web-platform/tests/html/browsers/browsing-the-web/navigating-across-documents/anchor-jsurl-form-submit.html
+++ b/testing/web-platform/tests/html/browsers/browsing-the-web/navigating-across-documents/anchor-jsurl-form-submit.html
@@ -6,13 +6,13 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 
-
-
-
-
+<!-- When an anchor element has an onclick handler which submits a form,
+  the anchor's navigation should occur instead of the form's navigation.
+  However, if the anchor has an href which returns undefined, then the form
+  should be submitted. -->
 
 <iframe name="test"></iframe>
-<form target="test" action="form.html"></form>
+<form target="test" action="resources/form.html"></form>
 <a id="anchor" target="test" onclick="document.forms[0].submit()" href="javascript:void(0)">Test</a>
 
 <script>
