Bug 1742117 [wpt PR 31684] - [SPC] Add tests for enrollment in an iframe, a=testonly
Automatic update from web-platform-tests
[SPC] Add tests for enrollment in an iframe (#31684)

--

wpt-commits: ae28863b68291fa71320ccc577aa874fbb7009b7
wpt-pr: 31684

UltraBlame original commit: 783f4d0c2334a6000b2a9ecc5f895acdc89831fd

--- a/testing/web-platform/tests/secure-payment-confirmation/resources/iframe-enroll.html
+++ b/testing/web-platform/tests/secure-payment-confirmation/resources/iframe-enroll.html
@@ -8,5 +8,7 @@
 // Assume that our parent has already created a virtual authenticator device.
 createCredential().then(credential => {
   parent.postMessage({id: credential.id, rawId: credential.rawId}, '*');
+}).catch(e => {
+  parent.postMessage({error: e}, '*');
 });
 </script>
