Bug 1741731 [wpt PR 31663] - WebKit export of https://bugs.webkit.org/show_bug.cgi?id=204276, a=testonly
Automatic update from web-platform-tests
WebKit export of https://bugs.webkit.org/show_bug.cgi?id=204276 (#31663)

--

wpt-commits: 4230a15e1c5f520243b128664b9bdd9dcc5c8faa
wpt-pr: 31663

UltraBlame original commit: 7ee0a7ab1d95862b5cf2a89198aa338525a49a68

--- a/testing/web-platform/tests/css/css-values/ic-unit-012.html
+++ b/testing/web-platform/tests/css/css-values/ic-unit-012.html
@@ -12,9 +12,16 @@
   <meta name="assert" content="In this test, the ic unit is the advance width measure of the 水 (CJK water ideograph, U+6C34) glyph.">
 
   <style>
+  @font-face
+    {
+      font-family: IcTestFullWidth;
+      src: url(resources/IcTestFullWidth.woff2);
+    }
+
   div
     {
       float: left;
+      font-family: IcTestFullWidth;
       font-size: 80px; /* arbitrary font size */
       text-orientation: sideways;
       writing-mode: vertical-rl;
@@ -41,9 +48,10 @@
 
   <div id="reference-orange">&#27700;&#27700;&#27700;&#27700;&#27700;</div>
 
-  
+  <!--
 
+  水 (CJK water ideograph, U+6C34) glyph == &#27700;
 
+  水 (CJK water ideograph, U+6C34) glyph == &#x6C34;
 
-
-
+  -->
