Bug 1742157 [wpt PR 31687] - [SPC] Fixup links and one more test, a=testonly
Automatic update from web-platform-tests
[SPC] Test that one cannot bypass the SPC transaction dialog

--
[SPC] Fix the spec URL links for various tests

--

wpt-commits: 4b49567d4c099b804143a32520247f40a145c4a9, 480b9ac4b759470542c5e8606bd06e1557ec25b4
wpt-pr: 31687

UltraBlame original commit: 785a469bf49ff0a03d2d287efd31f822fd081ded

--- a/testing/web-platform/tests/secure-payment-confirmation/authentication-cross-origin.sub.https.html
+++ b/testing/web-platform/tests/secure-payment-confirmation/authentication-cross-origin.sub.https.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Test for the 'secure-payment-confirmation' payment method authentication - cross origin</title>
-<link rel="help" href="https://w3c.github.io/secure-payment-confirmation#sctn-authentication">
+<link rel="help" href="https://w3c.github.io/secure-payment-confirmation#client-extension-processing-authentication">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/resources/testdriver.js"></script>
