Bug 1742772 [wpt PR 31728] - WebKit export of https://bugs.webkit.org/show_bug.cgi?id=233446, a=testonly
Automatic update from web-platform-tests
WebKit export of https://bugs.webkit.org/show_bug.cgi?id=233446

--

wpt-commits: 177488f9b76c83b4831b6ecd95c3b471d6b29ccc
wpt-pr: 31728

UltraBlame original commit: 1136f2c721df4f6a8b2a9f436a6f183e84b00e45

--- a/testing/web-platform/tests/css/selectors/focus-visible-018-2.html
+++ b/testing/web-platform/tests/css/selectors/focus-visible-018-2.html
@@ -53,7 +53,7 @@
 <figure tabindex="0">figure</figure>
 <form tabindex="0">form</form>
 <hr tabindex="0" />
-<img tabindex="0" src="#" />
+<img tabindex="0" src="/images/green.png" />
 <label tabindex="0">label</label>
 <li tabindex="0">li</li>
 <mark tabindex="0">mark</mark>
@@ -89,7 +89,7 @@
         test_driver.click(target).then(() => {
           if (i == (elements.length - 1))
             done();
-        });
+        }).catch(resolve);
       }).then(() => {
         assert_equals(getComputedStyle(target).outlineStyle, "none", `outline-style for ${target.tagName} should be none`);
       });
