Bug 1743080 [wpt PR 31755] - WebKit export of https://bugs.webkit.org/show_bug.cgi?id=233514, a=testonly
Automatic update from web-platform-tests
WebKit export of https://bugs.webkit.org/show_bug.cgi?id=233514 (#31755)

--

wpt-commits: 5a6f1ee2c25aa1f01ca09d853a2e5cb3b3a43ad6
wpt-pr: 31755

UltraBlame original commit: ea7b7d0ac8ab549afd8c083c3fedbd3f5d895ca2

--- a/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-focusing-steps-disconnected.html
+++ b/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-focusing-steps-disconnected.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Test that focusing steps do not run when dialog is disconnected</title>
+<title>Test focusing steps when dialog is disconnected</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 </head>
@@ -23,17 +23,17 @@ test(() => {
 
   dialog.show();
 
-  assert_equals(document.activeElement, outerInput, "Focusing steps should not run");
+  assert_equals(document.activeElement, outerInput, "Focusing steps should not change focus");
 
   // Clean up
   dialog.close();
-}, "dialog.show(): focusing steps should not run on disconnected <dialog>");
+}, "dialog.show(): focusing steps should not change focus on disconnected <dialog>");
 
 test(() => {
   assert_throws_dom("InvalidStateError", () => {
     document.createElement("dialog").showModal();
-  }, "dialog.showModal() should throw on disconnected <dialog>");
-});
+  });
+}, "dialog.showModal() should throw on disconnected <dialog>");
 </script>
 </body>
 </html>
