Bug 1743209 [wpt PR 31763] - Use proper cleanup in dialog-focusing-steps-disconnected.html, a=testonly
Automatic update from web-platform-tests
Use proper cleanup in dialog-focusing-steps-disconnected.html

See #31761

--

wpt-commits: 43fb287da71d4c37d7604c410f9c49c33df41fc5
wpt-pr: 31763

UltraBlame original commit: ec2128480e3055fd35f7c61cd7d2def2a29ea78e

--- a/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-focusing-steps-disconnected.html
+++ b/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-focusing-steps-disconnected.html
@@ -8,7 +8,7 @@
 <body>
 <input>
 <script>
-test(() => {
+test(function() {
   const outerInput = document.querySelector("input");
   outerInput.focus();
   assert_equals(document.activeElement, outerInput,
@@ -22,14 +22,12 @@ test(() => {
   dialog.append(innerInput);
 
   dialog.show();
+  this.add_cleanup(() => { dialog.close(); });
 
   assert_equals(document.activeElement, outerInput, "Focusing steps should not change focus");
-
-  // Clean up
-  dialog.close();
 }, "dialog.show(): focusing steps should not change focus on disconnected <dialog>");
 
-test(() => {
+test(function() {
   assert_throws_dom("InvalidStateError", () => {
     document.createElement("dialog").showModal();
   });
