Bug 1743044 - [devtools] Avoid instantiating duplicated Debugger.Source/SourceActor for inline scripts. r=bomsy
Regression from bug 1643540.
Debugger.findSourceURLs is recording all sources except the one having an `introductionScript` defined.
i.e. the one being added dynamically and not part of the original HTML content (at least that the expectation of findSourceURLs)
It is important to use the same filtering in ThreadActor, otherwise we may not populate `urlMap`
correctly and call resurrectSource for sources that were recorded by findSourceURLs.
This would introduce duplicated Debugger.Source and SourceActor for the same URL.

Differential Revision: https://phabricator.services.mozilla.com/D132218

UltraBlame original commit: dd0d0dabb4825fbe6b791f83ac291eea6c0d1a5a

--- a/devtools/shared/commands/resource/tests/sources.html
+++ b/devtools/shared/commands/resource/tests/sources.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8"/>
   </head>
   <body>
+    <!-- introductionType=eventHandler -->
+    <div onclick="console.log('link')">link</div>
+
     <!-- introductionType=inlineScript mapped to scriptElement -->
     <script type="text/javascript">
       "use strict";
@@ -29,7 +32,16 @@
       // Assign the worker to a global variable in order to avoid
       // having it be GCed.
       this.worker = new Worker("worker-sources.js");
+
       window.registrationPromise = navigator.serviceWorker.register("service-worker-sources.js");
+
+      // introductionType=domTimer
+      setTimeout(`console.log("timeout")`, 0);
+
+      // introductionType=eventHandler
+      window.addEventListener("DOMContentLoaded", () => {
+        document.querySelector("div[onclick]").click();
+      });
     </script>
     <!-- introductionType=srcScript mapped to scriptElement -->
     <script src="sources.js"></script>
