Bug 1556370 - Part 1: Support validation anchor for form-associated custom elements; r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D133288

UltraBlame original commit: f79183f26e34414609b64e23a8afd4b748ba9f59

--- a/testing/web-platform/tests/custom-elements/form-associated/ElementInternals-validation.html
+++ b/testing/web-platform/tests/custom-elements/form-associated/ElementInternals-validation.html
@@ -203,6 +203,13 @@ test(() => {
     control.i.setValidity(flags, m, control);
   }, 'Self');
 
+  let notHTMLElement = document.createElementNS('some-random-namespace', 'foo');
+  control.appendChild(notHTMLElement);
+  assert_throws_js(TypeError, () => {
+    control.i.setValidity(flags, m, notHTMLElement);
+  }, 'Not a HTMLElement');
+  notHTMLElement.remove();
+
   // A descendant
   control.i.setValidity(flags, m, control.querySelector('light-child'));
 
