--- a/testing/web-platform/tests/custom-elements/form-associated/ElementInternals-validation.html
+++ b/testing/web-platform/tests/custom-elements/form-associated/ElementInternals-validation.html
@@ -249,6 +249,11 @@ test(() => {
 }, 'checkValidity()');
 
 test(() => {
+  const element = new NotFormAssociatedElement();
+  assert_throws_dom('NotSupportedError', () => element.i.reportValidity());
+}, "reportValidity() should throw NotSupportedError if the target element is not a form-associated custom element");
+
+test(() => {
   const control = document.createElement('my-control');
   document.body.appendChild(control);
   control.tabIndex = 0;
