Bug 1744895 Part 2 - Fix justify-*:{left|right} mapping for vertical row-oriented flex containers. r=dholbert
Currently, we use IsPhysicalLTR() to query which is the start side of the
physical left <-> right axis. However, for vertical row-oriented flex
containers, physical left <-> right axis is its cross axis. We really should
query IsBidiLTR() instead because its main axis is parallel to line-left <->
line-right axis (i.e. inline axis).

flexbox-justify-content-wmvert-003.html is adapted from
flexbox-justify-content-wmvert-002.html.

Differential Revision: https://phabricator.services.mozilla.com/D133168

UltraBlame original commit: e31135ea40287f6e075392c35e281df709de004b

--- a/testing/web-platform/tests/css/css-flexbox/flexbox-justify-content-wmvert-003.html
+++ b/testing/web-platform/tests/css/css-flexbox/flexbox-justify-content-wmvert-003.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <link rel="author" title="David Grogan" href="mailto:dgrogan@chromium.org">
+<link rel="author" title="Ting-Yu Lin" href="mailto:tlin@mozilla.com">
 <link rel="help" href="https://drafts.csswg.org/css-flexbox/#justify-content-property" />
 <link rel="help" href="https://drafts.csswg.org/css-align-3/#positional-values" />
-<meta name="assert" content="Flexbox honors physical justify-content values when column flexboxes have main size in the physical left <-> right axis.">
+<meta name="assert" content="Flexbox honors justify-content values when vertical row flexboxes have main axis parallel to line-left <-> line-right axis.">
 
 <style>
 .flexbox {
   display: flex;
-  flex-direction: column;
-  width: 100px;
+  height: 100px;
   background: orange;
   border: 1px solid;
   margin-bottom: 20px;
@@ -26,18 +26,18 @@
 <script src="/resources/check-layout-th.js"></script>
 <body onload="checkLayout('.flexitem')">
 
-Both should be Blue to the left of Orange.
+Both should be Blue on top of Orange.
 <div class=flexbox style="justify-content: left; writing-mode: vertical-rl;">
-  <div class=flexitem data-offset-x=0></div>
+  <div class=flexitem data-offset-y=0></div>
 </div>
 <div class=flexbox style="justify-content: left; writing-mode: vertical-lr;">
-  <div class=flexitem data-offset-x=0></div>
+  <div class=flexitem data-offset-y=0></div>
 </div>
 
-Both should be Orange to the left of Blue.
+Both should be Orange on top of Blue.
 <div class=flexbox style="justify-content: right; writing-mode: vertical-rl;">
-  <div class=flexitem data-offset-x=50></div>
+  <div class=flexitem data-offset-y=50></div>
 </div>
 <div class=flexbox style="justify-content: right; writing-mode: vertical-lr;">
-  <div class=flexitem data-offset-x=50></div>
+  <div class=flexitem data-offset-y=50></div>
 </div>
