--- a/testing/web-platform/tests/css/css-text-decor/text-shadow/overflow-not-scrollable-1.html
+++ b/testing/web-platform/tests/css/css-text-decor/text-shadow/overflow-not-scrollable-1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
-<style type="text/css">
-
+<link rel="help" href="https://drafts.csswg.org/css-text-decor-3/#text-shadow-property">
+<link rel="match" href="overflow-not-scrollable-1-ref.html">
+<link rel="match" href="overflow-not-scrollable-1-ref2.html">
+<style>
 div {
   height: 200px; width: 200px; overflow: auto;
   text-shadow: 210px 210px 2px gray;
@@ -9,7 +11,6 @@ div {
 
 /* work around potential font overflow */
 span { margin-left: 5px }
-
 </style>
 <div>
 <span>text</span>
