--- a/dom/serviceworkers/test/test_openWindow.html
+++ b/dom/serviceworkers/test/test_openWindow.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=1172870
+-->
 <head>
   <title>Bug 1172870 - Test clients.openWindow</title>
   <script src="/tests/SimpleTest/SimpleTest.js"></script>
@@ -105,7 +105,7 @@
     ["dom.serviceWorkers.disable_open_click_delay", 1000],
     ["dom.serviceWorkers.idle_timeout", 299999],
     ["dom.serviceWorkers.idle_extended_timeout", 299999],
-    ["dom.securecontext.whitelist", "mochi.test,example.com"],
+    ["dom.securecontext.allowlist", "mochi.test,example.com"],
   ]}, runTest);
 </script>
 </body>
