--- a/devtools/server/tests/chrome/test_css-properties.html
+++ b/devtools/server/tests/chrome/test_css-properties.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+Bug 1265798 - Replace inIDOMUtils.cssPropertyIsShorthand
+-->
 <head>
   <meta charset="utf-8">
   <title>Test CSS Properties Actor</title>
@@ -39,7 +39,7 @@ window.onload = function() {
       "A CSS variable with spaces fails");
 
     is(toSortedString(cssProperties.getValues("margin")),
-       toSortedString(["auto", "inherit", "initial", "unset", "revert"]),
+       toSortedString(["auto", "inherit", "initial", "unset", "revert", "revert-layer"]),
        "Can get values for the CSS margin.");
     is(cssProperties.getValues("foobar").length, 0,
       "Unknown values return an empty array.");
