Bug 1750487 - Tentatively make test_popup_scaled's last test work on Windows on automation. CLOSED TREE
The test used to move the target 120 device pixels down, but with the tweak
above it becomes 240 pixels, which seems to go over the screen size limit and
clamp our popup position vertically.

We just need some non-zero coordinate to test that coordinates aren't getting
messed with, so shrink that number a bit.

Also make the flush less explicit by waiting for two RAFs, though that
shouldn't matter in practice.

UltraBlame original commit: 4540f58e953c11364073a018ad07a9ab9b3bc8e6

--- a/toolkit/content/tests/chrome/test_popup_scaled.xhtml
+++ b/toolkit/content/tests/chrome/test_popup_scaled.xhtml
@@ -75,11 +75,11 @@ function nextTest()
     setScale(window, 2);
     // - the iframe will be at 4×, but out here css pixels are only 2× device pixels
 
-    rootElement.getBoundingClientRect(); // flush layout.
-
-    screenx = rootElement.screenX + 120;
-    screeny = rootElement.screenY + 120;
-    $("popup").openPopupAtScreen(screenx, screeny);
+    requestAnimationFrame(() => requestAnimationFrame(() => {
+      screenx = rootElement.screenX + 20;
+      screeny = rootElement.screenY + 20;
+      $("popup").openPopupAtScreen(screenx, screeny);
+    }));
   }
 }
 
