Bug 1756822 - [devtools] Don't include unnecessary properties in console message resource. r=jdescottes.
Don't clone the whole message we receive as a result of a console API call, but select
properties that are being used on the client.
As a result, we're not sending some properties anymore (`functionName`, `addonId`, `workerType`),
and we also don't include some properties when they are falsy and wouldn't bring
any benefit (`counter`,`timer`, `private`, `prefix`, `stacktrace`)

Hopefully this helps save some cycle since we're not cloning an object, but also in the
JSActor communication since the packet we need to send is smaller.

We do similar changes to the webconsoleActor method, which is still used in non
fission scenarios, and remove WebConsoleUtils.cloneObject which is no longer used.

Differential Revision: https://phabricator.services.mozilla.com/D139686

UltraBlame original commit: 2057064f7907df97cbc62ee59cd6f155c2ca828d

--- a/devtools/shared/webconsole/test/chrome/test_cached_messages.html
+++ b/devtools/shared/webconsole/test/chrome/test_cached_messages.html
@@ -5,8 +5,8 @@
   <title>Test for cached messages</title>
   <script src="chrome://mochikit/content/tests/SimpleTest/SimpleTest.js"></script>
   <script type="text/javascript" src="common.js"></script>
-  
-
+  <!-- Any copyright is dedicated to the Public Domain.
+     - http://creativecommons.org/publicdomain/zero/1.0/ -->
 </head>
 <body>
 <p>Test for cached messages</p>
@@ -74,21 +74,18 @@ function doConsoleCalls() {
     {
       level: "log",
       filename: /test_cached_messages/,
-      functionName: "doConsoleCalls",
       timeStamp: /^\d+$/,
       arguments: ["foobarBaz-log", { type: "undefined" }],
     },
     {
       level: "info",
       filename: /test_cached_messages/,
-      functionName: "doConsoleCalls",
       timeStamp: /^\d+$/,
       arguments: ["foobarBaz-info", { type: "null" }],
     },
     {
       level: "warn",
       filename: /test_cached_messages/,
-      functionName: "doConsoleCalls",
       timeStamp: /^\d+$/,
       arguments: ["foobarBaz-warn", { type: "object", actor: /[a-z]/ }],
     },
@@ -164,8 +161,7 @@ function onCachedConsoleAPI(state, response) {
 
   for (const {message} of msgs) {
     for (const expected of expectedConsoleCalls) {
-      if (expected.functionName == message.functionName &&
-          expected.filename.test(message.filename)) {
+      if (expected.filename.test(message.filename)) {
         expectedConsoleCalls.splice(expectedConsoleCalls.indexOf(expected));
         checkConsoleAPICall(message, expected);
         break;
