--- a/devtools/shared/webconsole/test/chrome/test_object_actor_native_getters_lenient_this.html
+++ b/devtools/shared/webconsole/test/chrome/test_object_actor_native_getters_lenient_this.html
@@ -6,8 +6,8 @@
          do not appear in the wrong objects</title>
   <script src="chrome://mochikit/content/tests/SimpleTest/SimpleTest.js"></script>
   <script type="text/javascript" src="common.js"></script>
-  
-
+  <!-- Any copyright is dedicated to the Public Domain.
+     - http://creativecommons.org/publicdomain/zero/1.0/ -->
 </head>
 <body>
 <p>Test for the native getters in object actors</p>
@@ -30,7 +30,6 @@ async function startTest() {
   checkConsoleAPICall(message, {
     level: "log",
     filename: /test_object_actor/,
-    functionName: "startTest",
     arguments: ["hello", {
       type: "object",
       actor: /[a-z]/,
