--- a/devtools/shared/webconsole/test/chrome/test_console_styling.html
+++ b/devtools/shared/webconsole/test/chrome/test_console_styling.html
@@ -5,8 +5,8 @@
   <title>Test for console.log styling with %c</title>
   <script src="chrome://mochikit/content/tests/SimpleTest/SimpleTest.js"></script>
   <script type="text/javascript" src="common.js"></script>
-  
-
+  <!-- Any copyright is dedicated to the Public Domain.
+     - http://creativecommons.org/publicdomain/zero/1.0/ -->
 </head>
 <body>
 <p>Test for console.log styling with %c</p>
@@ -38,7 +38,7 @@ function doConsoleCalls(aState)
   expectedConsoleCalls = [
     {
       level: "log",
-      styles: /^$/,
+      styles: undefined,
       arguments: ["%cOne formatter with no styles"],
     },
     {
@@ -111,7 +111,13 @@ function onConsoleAPICall(aState, aPacket)
 
   expectedConsoleCalls.forEach(function(aMessage, aIndex) {
     info("checking received console call #" + aIndex);
-    checkConsoleAPICall(consoleCalls[aIndex], expectedConsoleCalls[aIndex]);
+    const expected = expectedConsoleCalls[aIndex];
+    const consoleCall = consoleCalls[aIndex];
+    if (expected.styles == undefined) {
+      delete expected.styles;
+      is(consoleCall.styles, undefined, "No 'styles' property")
+    }
+    checkConsoleAPICall(consoleCall, expected);
   });
 
 
