--- a/devtools/shared/webconsole/test/chrome/test_consoleapi.html
+++ b/devtools/shared/webconsole/test/chrome/test_consoleapi.html
@@ -5,8 +5,8 @@
   <title>Test for the Console API</title>
   <script src="chrome://mochikit/content/tests/SimpleTest/SimpleTest.js"></script>
   <script type="text/javascript" src="common.js"></script>
-  
-
+  <!-- Any copyright is dedicated to the Public Domain.
+     - http://creativecommons.org/publicdomain/zero/1.0/ -->
 </head>
 <body>
 <p>Test for the Console API</p>
@@ -54,7 +54,6 @@ function doConsoleCalls(aState)
     {
       level: "log",
       filename: /test_consoleapi/,
-      functionName: "doConsoleCalls",
       timeStamp: /^\d+$/,
       arguments: ["foobarBaz-log", { type: "undefined" }],
     },
@@ -73,28 +72,24 @@ function doConsoleCalls(aState)
     {
       level: "info",
       filename: /test_consoleapi/,
-      functionName: "doConsoleCalls",
       timeStamp: /^\d+$/,
       arguments: ["foobarBaz-info", { type: "null" }],
     },
     {
       level: "warn",
       filename: /test_consoleapi/,
-      functionName: "doConsoleCalls",
       timeStamp: /^\d+$/,
       arguments: ["foobarBaz-warn", { type: "object", actor: /[a-z]/ }],
     },
     {
       level: "debug",
       filename: /test_consoleapi/,
-      functionName: "doConsoleCalls",
       timeStamp: /^\d+$/,
       arguments: [{ type: "null" }],
     },
     {
       level: "trace",
       filename: /test_consoleapi/,
-      functionName: "doConsoleCalls",
       timeStamp: /^\d+$/,
       stacktrace: [
         {
@@ -110,7 +105,6 @@ function doConsoleCalls(aState)
     {
       level: "dir",
       filename: /test_consoleapi/,
-      functionName: "doConsoleCalls",
       timeStamp: /^\d+$/,
       arguments: [
         {
@@ -128,7 +122,6 @@ function doConsoleCalls(aState)
     {
       level: "log",
       filename: /test_consoleapi/,
-      functionName: "doConsoleCalls",
       timeStamp: /^\d+$/,
       arguments: [
         "foo",
@@ -144,7 +137,6 @@ function doConsoleCalls(aState)
     {
       level: "log",
       filename: /test_consoleapi/,
-      functionName: "doConsoleCalls",
       timeStamp: /^\d+$/,
       arguments: [
         {
@@ -157,7 +149,6 @@ function doConsoleCalls(aState)
     {
       level: "error",
       filename: /test_consoleapi/,
-      functionName: "fromAsmJS",
       timeStamp: /^\d+$/,
       arguments: ["foobarBaz-asmjs-error", { type: "undefined" }],
 
