Bug 1357082, try to stabilize test_pointerlock-api.html by waiting for a refreshtick before and after a sub-test run r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D140899

UltraBlame original commit: 31507af11955ae08cd964eed5f9fc2d301f86596

--- a/dom/tests/mochitest/pointerlock/test_pointerlock-api.html
+++ b/dom/tests/mochitest/pointerlock/test_pointerlock-api.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=633602
+-->
   <head>
     <title>Test for Bug 633602</title>
     <script type="application/javascript"  src="/tests/SimpleTest/SimpleTest.js"></script>
@@ -75,7 +75,10 @@
           if (gTestWindow) {
             gTestWindow.close();
           }
-          SimpleTest.waitForFocus(runNextTest);
+
+          // Try to stabilize the state before running the next test.
+          SimpleTest.waitForFocus(
+            () => requestAnimationFrame(() => setTimeout(runNextTest)));
         }
 
         function runNextTest() {
