Bug 1759121 - Adjust an accessibility test that depended on a selectable block being after a <br>. r=morgan
An alternative would be to adjust the test expectation to not include
the trailing newline, but this seemed more likely to be what the test
wanted to test.

Differential Revision: https://phabricator.services.mozilla.com/D140954

UltraBlame original commit: 9b06b7971cc1f39a551c3cb5d48c4a39cdbb6872

--- a/accessible/tests/mochitest/text/test_hypertext.html
+++ b/accessible/tests/mochitest/text/test_hypertext.html
@@ -132,18 +132,19 @@
   </ol>
 
   <div id="hypertext3">line
-
-
+<!-- haha -->
+<!-- hahaha -->
 <h6>heading</h6>
   </div>
 
   <div id="hypertext4">line
-
-
+<!-- haha -->
+<!-- hahaha -->
 <h6 role="presentation" class="gencontent">heading</h6>
   </div>
 
   <div id="testbr">foo<br/></div>
 
+  <div></div>
 </body>
 </html>
