Bug 1754441 - Explicit set prefs to enable InstallTrigger on all tests that depend on its availability. r=mixedpuppy
Differential Revision: https://phabricator.services.mozilla.com/D138793

UltraBlame original commit: 095054f6f110ead41547b21b1d3f6151deb39885

--- a/js/xpconnect/tests/mochitest/test_bug628410.html
+++ b/js/xpconnect/tests/mochitest/test_bug628410.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=628410
+-->
 <head>
   <title>Test for Bug 628410</title>
   <script src="/tests/SimpleTest/SimpleTest.js"></script>
@@ -18,9 +18,13 @@
 <pre id="test">
 <script type="application/javascript">
 
-/** Test for Bug 628410 **/
 window.toString();
-InstallTrigger + "";
+
+if (SpecialPowers.Services.prefs.getBoolPref("extensions.InstallTrigger.enabled") &&
+    SpecialPowers.Services.prefs.getBoolPref("extensions.InstallTriggerImpl.enabled")) {
+  InstallTrigger + "";
+}
+
 console + "";
 ok(true, "Things didn't throw");
 
