Bug 1760206 [wpt PR 33159] - Use FloatRoundedRect::OutsetForMarginOrShadow() when painting shadow, a=testonly
Automatic update from web-platform-tests
Use FloatRoundedRect::OutsetForMarginOrShadow() when painting shadow

Bug: 1159514
Change-Id: I2a42d210bd48e729651a646b2c8bb268c5d1eb45
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3502196
Reviewed-by: David Baron <dbaronchromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhuchromium.org>
Cr-Commit-Position: refs/heads/main{#981573}

--

wpt-commits: ac5e98e91869672e1118e5626861c967ca566271
wpt-pr: 33159

UltraBlame original commit: 8492390df62db7d0d71231a6a025de5530125f94

--- a/testing/web-platform/tests/css/css-backgrounds/box-shadow-radius-000-ref.html
+++ b/testing/web-platform/tests/css/css-backgrounds/box-shadow-radius-000-ref.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>Box Shadow Border Radius (Outset)</title>
 <link rel="author" title="Elika J. Etemad" href="http://fantasai.inkedblade.net/contact">
-
+<!-- This test is complicated, so leaving the reference code identical to the test, minus colors. Please keep them in sync. -->
 
 <style>
   body > div {
@@ -92,7 +92,7 @@
     border-width: 14px;
   }
   .half.trap > .ref {
-    border-width: 18px;
+    border-width: 20px;
   }
 
   .fourth > .test {
@@ -109,7 +109,7 @@
     border-width: 18px;
   }
   .fourth.trap > .ref {
-    border-width: 22px;
+    border-width: 23px;
   }
 
   .eighth > .test {
