Bug 1826517 - Simplify DevTools' walker. r=smaug,devtools-reviewers,nchevobbe
The tree devtools uses is the light dom + pseudo-elements + NAC, but sometimes
it wants to know stuff about the flat tree like assigned nodes. Previously it
was using a weird mix of the anonymous vs. non-anonymous walkers to get what it
wants, but that's needlessly complicated.

Instead, make InspectorUtils.getChildrenForNode do the right thing, and add
assigned nodes explicitly.

While _getChildren using a walker might seem like a good idea for performance,
realistically it was using InspectorUtils under the hood, and this is much
simpler.

Differential Revision: https://phabricator.services.mozilla.com/D174491

UltraBlame original commit: 8c8535d8700e17d248195e112627044dec42cad5

--- a/dom/base/test/test_anonymousContent_set_style.html
+++ b/dom/base/test/test_anonymousContent_set_style.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=1571650
+-->
 <head>
   <meta charset="utf-8">
   <title>Test for Bug 1571650 - Test AnonymousContent.setStyle() API</title>
@@ -22,7 +22,7 @@
 
   info("Test the element which became to anonymous");
   const mozCustomContentContainerEl =
-    [...SpecialPowers.InspectorUtils.getChildrenForNode(document.documentElement, true)]
+    [...SpecialPowers.InspectorUtils.getChildrenForNode(document.documentElement, true, false)]
       .find(n => n.classList && n.classList.contains("moz-custom-content-container"));
 
   const targetEl = mozCustomContentContainerEl.querySelector(".set-style-test");
